-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.5.3
-
None
-
3
-
9223372036854775807
As part of LU-7054 we applied patch http://review.whamcloud.com/#/c/14600 put we are hitting LBUG on the server
LNetError: 6521:0:(o2iblnd.c:377:kiblnd_destroy_peer()) ASSERTION( peer->ibp_connecting == 0 ) failed:
LNetError: 6521:0:(o2iblnd.c:377:kiblnd_destroy_peer()) LBUG
Pid: 6521, comm: kiblnd_connd